--- a/README.org
+++ b/README.org
@@ -1,3 +1,4 @@
+
 * First Heading
 
 * M-<RET> Heading
@@ -11,6 +12,9 @@
 ******** E
 
   Some content with a link [[https://orgmode.org/][Org Mode Homepage]]
+
+  This line is super long and therefore will likely be longer than a is visible in one line so it's clear how many characters I have in one line and that it's wrapping as expected
+  
   *bold*
   /italic/
 
@@ -55,4 +59,5 @@
 * TODO a task
 
 * DONE a done task
+
 
